--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 <body>
     <div class="main container">
 		<section class="iupload">
-			<h3 class="text-center py-4">Object Classification</h3>
+			<h3 class="text-center py-4">Image classification</h3>
 			<div class="row">
 				<div class="img-part col-md-6">
 					<div class="image-part">
